; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_md4.c_mdfour_begin.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_md4.c_mdfour_begin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mdfour = type { i32, i32, i32, i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mdfour_begin(%struct.mdfour* %0) #0 {
  %2 = alloca %struct.mdfour*, align 8
  store %struct.mdfour* %0, %struct.mdfour** %2, align 8
  %3 = load %struct.mdfour*, %struct.mdfour** %2, align 8
  %4 = getelementptr inbounds %struct.mdfour, %struct.mdfour* %3, i32 0, i32 0
  store i32 1732584193, i32* %4, align 8
  %5 = load %struct.mdfour*, %struct.mdfour** %2, align 8
  %6 = getelementptr inbounds %struct.mdfour, %struct.mdfour* %5, i32 0, i32 1
  store i32 -271733879, i32* %6, align 4
  %7 = load %struct.mdfour*, %struct.mdfour** %2, align 8
  %8 = getelementptr inbounds %struct.mdfour, %struct.mdfour* %7, i32 0, i32 2
  store i32 -1732584194, i32* %8, align 8
  %9 = load %struct.mdfour*, %struct.mdfour** %2, align 8
  %10 = getelementptr inbounds %struct.mdfour, %struct.mdfour* %9, i32 0, i32 3
  store i32 271733878, i32* %10, align 4
  %11 = load %struct.mdfour*, %struct.mdfour** %2, align 8
  %12 = getelementptr inbounds %struct.mdfour, %struct.mdfour* %11, i32 0, i32 4
  store i64 0, i64* %12, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
